fix(task): make sure the modal close button is not overlapped with the title field (#3256)
Resolves https://kolaente.dev/vikunja/frontend/issues/3252
Reviewed-on: https://kolaente.dev/vikunja/frontend/pulls/3256
Co-committed-by: kolaente <k@knt.li>

--- a/src/styles/common-imports.scss
+++ b/src/styles/common-imports.scss
@@ -37,3 +37,5 @@ $navbar-padding: 2rem;
 
 $vikunja-nav-color: var(--grey-700);
 $vikunja-nav-selected-width: 0.4rem;
+
+$close-button-min-space: 84px;
